bk_ida/gccida/g0/apply_distributive_law
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/apply_distributive_law/src/combine.c:8163:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+20h] [rbp-20h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/apply_distributive_law/src/combine.c:8164:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code inner_code; // [rsp+24h] [rbp-1Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/apply_distributive_law/src/combine.c:8172:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[*( ( unsigned __int8 *)x + 2)] == MODE_FLOAT 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/apply_distributive_law/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/apply_distributive_law/src/combine.c:8173:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)x + 2)] == MODE_COMPLEX_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/apply_distributive_law/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/apply_distributive_law/src/combine.c:8174:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)x + 2)] == MODE_VECTOR_FLOAT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/apply_distributive_law/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/apply_distributive_law/src/combine.c:8181:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
rhs = (  struct rtx_def *)x[1]; 
                          ^~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/apply_distributive_law/src/combine.c:8193:12: error: invalid operands to binary expression ('struct rtx_def' and 'struct rtx_def')
|| lhsa[1] != rhsa[1] 
   ~~~~~~~ ^  ~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/apply_distributive_law/src/combine.c:8195:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)lhsa + 2)] != mode_class_0[*( unsigned __int8 *)( lhsa->fld[0].rtwint + 2)] 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/apply_distributive_law/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/apply_distributive_law/src/combine.c:8195:54: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)lhsa + 2)] != mode_class_0[*( unsigned __int8 *)( lhsa->fld[0].rtwint + 2)] 
                                                     ^~~~~~~~~~~~
                                                     mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/apply_distributive_law/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/apply_distributive_law/src/combine.c:8205:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( lhsa->fld[0].rtwint + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/apply_distributive_law/src/combine.c:8208:35: error: use of undeclared identifier 'machine_mode'
return gen_lowpart_for_combine( ( machine_mode)*( ( unsigned __int8 *)x + 2), tema); 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/apply_distributive_law/src/combine.c:8225:26: error: use of undeclared identifier 'machine_mode'
v3 = gen_binary( code, ( machine_mode)*( ( unsigned __int8 *)x + 2), *( rtx *)&lhsa[1], *( rtx *)&rhsa[1]); 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/apply_distributive_law/src/combine.c:8230:26: error: use of undeclared identifier 'machine_mode'
v3 = gen_binary( code, ( machine_mode)*( ( unsigned __int8 *)x + 2), *( rtx *)&lhsa[1], rhsa->fld[0].rtx); 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/apply_distributive_law/src/combine.c:8234:29: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
other = (  struct rtx_def *)lhsa[1]; 
                            ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/apply_distributive_law/src/combine.c:8235:26: error: use of undeclared identifier 'machine_mode'
v3 = gen_binary( code, ( machine_mode)*( ( unsigned __int8 *)x + 2), lhsa->fld[0].rtx, *( rtx *)&rhsa[1]); 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/apply_distributive_law/src/combine.c:8241:29: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
other = (  struct rtx_def *)lhsa[1]; 
                            ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/apply_distributive_law/src/combine.c:8242:26: error: use of undeclared identifier 'machine_mode'
v3 = gen_binary( code, ( machine_mode)*( ( unsigned __int8 *)x + 2), lhsa->fld[0].rtx, rhsa->fld[0].rtx); 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/apply_distributive_law/src/combine.c:8250:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)x + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/apply_distributive_law/src/combine.c:8252:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)x + 2)); 
  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/apply_distributive_law/src/obj/combine.o] Error 1
